--- a/src/renderer/css/global.scss
+++ b/src/renderer/css/global.scss
@@ -8,6 +8,12 @@
 /** font */
 @import url('../fonts/index.scss');
 
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  background: rgba(0,0,0,.3);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
