--- a/src/renderer/pages/components/mdEditor/css/basic.scss
+++ b/src/renderer/pages/components/mdEditor/css/basic.scss
@@ -74,5 +74,15 @@ code {
   padding: 0 .45em;
   font-size: 85%;
   border-radius: 4px;
-  background-color: rgba(0,0,0,0.04);
+  background-color: rgba(0,0,0,.04);
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 100%;
+  background: rgba(0,0,0,.06);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0,.1);
+  border-radius: 3px;
 }
