ADD window.vue 窗口组件的样式

--- a/src/renderer/css/atom-css/functional.scss
+++ b/src/renderer/css/atom-css/functional.scss
@@ -1,4 +1,4 @@
-.nothing {
+.none {
   display: none;
 }
 .max {
@@ -10,4 +10,7 @@
 }
 .round {
   border-radius: 50%;
+}
+.clear {
+  clear: both;
 }
