ADD window body内部无填充样式

--- a/src/renderer/css/atom-css/flex.scss
+++ b/src/renderer/css/atom-css/flex.scss
@@ -173,3 +173,15 @@
 .f1 {
   flex: 1;
 }
+.fs0 {
+  flex-shrink: 0;
+}
+.fs1 {
+  flex-shrink: 1;
+}
+.fg0 {
+  flex-shrink: 0;
+}
+.fg1 {
+  flex-shrink: 1;
+}
